--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.rxtxcomm-2.2.jar=C:\\Program Files\\Java\\jre1.8.0_121\\lib\\rxtxcomm-2.2.jar
+file.reference.rxtxcomm-2.2.jar-1=../../../../../Downloads/rxtxcomm-2.2.jar
+file.reference.rxtxcomm-2.2.jar-2=C:\\Program Files (x86)\\Java\\jre1.8.0_131\\lib\\rxtxcomm-2.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.rxtxcomm-2.2.jar}
+    ${file.reference.rxtxcomm-2.2.jar}:\
+    ${file.reference.rxtxcomm-2.2.jar-1}:\
+    ${file.reference.rxtxcomm-2.2.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
